--- a/public_html/layout/nouveau/style.css
+++ b/public_html/layout/nouveau/style.css
@@ -804,7 +804,6 @@ text-align:right;
 .commentbar-line1 {
 background:transparent;
 color:#000;
-text-align:center;
 padding:3px;
 }
 
@@ -812,15 +811,12 @@ padding:3px;
 background:#E7E7E7;
 border-bottom:1px solid #FFF;
 border-top:1px solid #FFF;
-text-align:center;
 }
 
 .commentbar-line3 {
 background:#FFF;
 border-bottom:1px solid #FFF;
-border-top:1px solid #E7E7E7;
 color:#000;
-text-align:center;
 padding:3px;
 }
 
